# GraphVisAlgoEvaluation

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  SamplesCreation.ipynb  main.cpp  run.sh
lib/OpticalGraphRecognition/: CMakeLists.txt  aesthetic_metrics.cpp  aesthetic_metrics.h  disjoint_set.h  extended_mat.cpp  extended_mat.h  graph_crawler.cpp  graph_crawler.h  inc.h  pixel_classifier.cpp  pixel_classifier.h  stack_vector.h  utils.h
lib/optical_graph_recognition/: CMakeLists.txt  optical_graph_recognition.cpp  optical_graph_recognition.h  reporter.cpp  reporter.h
lib/optical_graph_recognition/algo_params/: params.cpp  params.h
lib/optical_graph_recognition/algo_utils/: gluer.h  sampling.h
lib/optical_graph_recognition/crawler/: edge_crawler.cpp  edge_crawler.h  edges_detector.cpp  edges_detector.h  step.cpp  step.h  step_tree_node.cpp  step_tree_node.h
lib/optical_graph_recognition/iterators/: consecutive_iterator.h  filters.h  neighbours.h
lib/optical_graph_recognition/map/: composite_map.h  reset_decorator.h
lib/optical_graph_recognition/ogr_components/: matrix.h  point.h  structured_elements.h
lib/optical_graph_recognition/stats/: stats.cpp  stats.h
lib/optical_graph_recognition/utils/: debug.cpp  debug.h  disjoint_set.h  geometry.h  matrix_utils.h  opencv_utils.cpp  opencv_utils.h  point_filters.h  stack_vector.h  types.h  vector.h
lib/optical_graph_recognition/vertex/: detectors.h
results/1/: report.txt
results/2/: report.txt
results/3/: report.txt
results/4/: report.txt
results/5/: report.txt
